Convert Angel summoning to templates